--- a/dashboard/src/components/global/suggest-input.scss
+++ b/dashboard/src/components/global/suggest-input.scss
@@ -5,18 +5,25 @@ $border-radius: 8px;
   padding: 0;
   list-style-type: none;
   border: 1px solid #AAAAAA;
-  border-bottom-left-radius: $border-radius;
-  border-bottom-right-radius: $border-radius;
+  border-radius: 0 0 $border-radius $border-radius;
+  background-color: #FFFFFF;
   z-index: 2;
 }
 .suggestionsContainer {
+  position: absolute;
+  width: 100%;
   overflow-y: auto;
   max-height: 200px;
 }
 .suggestion {
   cursor: pointer;
   padding: 5px 10px;
+  font-size: 12px;
 }
 .suggestionHighlighted {
   background-color: #DDDDDD;
+
+  &:last-child {
+    border-radius: 0 0 $border-radius $border-radius;
+  }
 }
